tests/paczka1/small_fuzzy/58749807.err
Error in line 10: dqUQ020b1y A655 80,9
Error in line 12: TjafH S$60 59,5
